--- a/views/components/htmlTop.ejs
+++ b/views/components/htmlTop.ejs
@@ -25,6 +25,9 @@
             <%- include('./style/style-size-picker') %>
             <%- include('./style/style-color-picker') %>
             <%- include('./style/style-arrivals') %>
+            <% break
+        case 'Bag': %>
+            <%- include('./bagPage/style/style-bag-page') %>
             <% break %>
     <% } %>
 </head>
