--- a/views/components/style/style-preset.ejs
+++ b/views/components/style/style-preset.ejs
@@ -61,6 +61,12 @@
         outline: 0;
     }
 
+    select {
+        border: none;
+
+        outline: 0;
+    }
+
     li {
         list-style: none;
     }
