--- a/views/components/catalogPage/style/style-catalog-page.ejs
+++ b/views/components/catalogPage/style/style-catalog-page.ejs
@@ -80,7 +80,7 @@
             color: red;
         } 
 
-        #product-sizes,
+        /* #product-sizes,
         #price-picker,
         #color-previews-field,
         #fabric-picker {
@@ -96,7 +96,7 @@
         #color-previews-field.active,
         #fabric-picker.active {
             max-height: 1000px;
-        }
+        } */
 
         #price-picker {
             display: flex;
@@ -182,17 +182,17 @@
             aside {
                 margin-bottom: 40px;
 
-                max-height: 0;
+                /* max-height: 0;
 
                 overflow: hidden;
 
-                transition: max-height 0.3s ease-in-out;
+                transition: max-height 0.3s ease-in-out; */
                 
                 padding-bottom: 0;
             }
 
                 aside.active {
-                    max-height: 3000px;
+                    /* max-height: 3000px; */
 
                     padding-bottom: 3%;
                 }
