--- a/views/components/color-picker.ejs
+++ b/views/components/color-picker.ejs
@@ -1,4 +1,4 @@
-<div id='color-previews-field'>
+<div id='color-previews-field' class="<%= className %>">
     <% for(let c of colors) { %>
         <button id='product-color-preview' class="" style="background-color: <%= c %>;"></button>
     <% } %>
