--- a/views/components/size-picker.ejs
+++ b/views/components/size-picker.ejs
@@ -1,4 +1,4 @@
-<div id='product-sizes'>
+<div id='product-sizes' class="<%= className %>">
     <% for(let s of sizes) { %>
         <button><%= s %></button>
     <% } %>
