--- a/views/product.ejs
+++ b/views/product.ejs
@@ -15,13 +15,15 @@
                 <div id='product-color-field'>
                     <span class='product-header-title'>COLOR</span>
                     <%- include('./components/color-picker', {
-                        colors: ['blue', 'brown', 'gray', 'red']
+                        colors: ['blue', 'brown', 'gray', 'red'],
+                        className: ''
                     }) %> 
                 </div>
                 <div id='product-size-field'>
                     <span class='product-header-title'>SIZE</span>
                     <%- include('./components/size-picker', {
-                        sizes: ['S', 'M', 'L', 'XL']
+                        sizes: ['S', 'M', 'L', 'XL'],
+                        className: ''
                     }) %>
                 </div>
                 <div id='product-buy-field'>
@@ -34,28 +36,28 @@
                 </div>
                 <ul id='product-info'>
                     <li>
-                        <button>
+                        <button class="toggle">
                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M6 8V14H8V8H14V6H8V0H6V6H0V8H6Z" fill="#000F08"/>
                             </svg>
                             PRODUCT DESCRIPTION  
                         </button>
-                        <p class='product-info-text'>
+                        <p class='product-info-text toggleable'>
                             Saints are a low-waist, drop crotch relaxed boyfriend jean. Straight fit across the hips, bow shape legs, with knee darts and tapered leg. Back pockets dropped slightly for slouch feel. 
                         </p>            
                     </li>
                     <li>
-                        <button>
+                        <button class="toggle">
                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M6 8V14H8V8H14V6H8V0H6V6H0V8H6Z" fill="#000F08"/>
                             </svg>
                             FABRIC COMPOSITION
                         </button>
-                        <p class='product-info-text'>
+                        <p class='product-info-text toggleable'>
                             Saints are a low-waist, drop crotch relaxed boyfriend jean. Straight fit across the hips, bow shape legs, with knee darts and tapered leg. Back pockets dropped slightly for slouch feel. 
                         </p>
                     </li>
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="arrow-icon" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve">
+                    <svg id="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve">
                         <g>
                             <path d="M225.923,354.706c-8.098,0-16.195-3.092-22.369-9.263L9.27,151.157c-12.359-12.359-12.359-32.397,0-44.751   c12.354-12.354,32.388-12.354,44.748,0l171.905,171.915l171.906-171.909c12.359-12.354,32.391-12.354,44.744,0   c12.365,12.354,12.365,32.392,0,44.751L248.292,345.449C242.115,351.621,234.018,354.706,225.923,354.706z"/>
                         </g>
@@ -80,16 +82,6 @@
             ]
         }) %> 
     </main>
-    <script src="utils/toggleIcon.js"></script>
-    <script src="utils/toggleContent.js"></script>
-    <script src="utils/handleScrollArrow.js"></script>
-    <script>
-        toggleContent([
-            {elClick: '#product-info button', elToggle: 'p'}
-        ], (icon, el) => {
-            toggleIcon(icon, el)
-        })
-    </script>
 <%- include('./components/htmlBottom', {
     page: 'Product',
     carouselList: ['#product-photo-field', '#product-extra-items']
