--- a/views/components/htmlBottom.ejs
+++ b/views/components/htmlBottom.ejs
@@ -1,26 +1,18 @@
     <%- include('./footer') %>
-    <% if(page && page == 'Product') { %>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script>
-            let matchSize = window.matchMedia('(max-width: 1000px)')
-            handleCarouselUsage(matchSize, true)
-            matchSize.addListener(handleCarouselUsage)
+    <script src="./controller/InterfaceController.js"></script>
+    <script src="index.js"></script>
 
-            function handleCarouselUsage(e, firstCheck=false) {
-                if(e.matches) {
-                    <% for(let item of carouselList) { %>
-                        $('<%= item %>').slick();
-                    <% } %>
-                } else {
-                    if(!firstCheck) {
-                        <% for(let item of carouselList) { %>
-                            $('<%= item %>').slick('unslick');
-                        <% } %>
-                    }
-                }
-            }
-        </script>
+    <% switch(page) {
+        case 'Product': %>
+            // SLICK CAROUSEL CDN
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+            <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+            <script>
+                appInterface.handleScrollArrow()
+                appInterface.handleCarouselSlider(<%-JSON.stringify(carouselList)%>)
+            </script>
+            <% break
+        case '': %>
     <% } %>
 </body>
 </html>
